@@ -7,6 +7,7 @@ Version 1.5
 * functions called by vmux: don't print messages to stdout.
 * vdifspec: allow passing of bchan and echan to m5spec
 * python2 -> python3
+* new utility: splitVDIFbygap : breaks a VDIF file into multiple based on time gaps
 
 Version 1.4
 ~~~~~~~~~~~
